falling imgs stretched on mobile fix 2

--- a/src/App.css
+++ b/src/App.css
@@ -185,7 +185,7 @@ body {
 .falling-artwork {
   width: 33.333%;
   min-width: 135px;
-  max-height: 100%;
+  max-height: 135px;
 }
 
 .nav-color {
